clean_me/app1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1
  labels:
    run: app1
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  type: NodePort
  selector:
    run: app1
