clean_me/green-ingress-nginx.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: green-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: green.f5demo.com
    http:
      paths:
      - backend:
          serviceName: node-green
          servicePort: 80
